tests/negative/semantic/wrong_arg_count_readfile/input.ci
void main() {
    print(toString(readFile()) + "\n");
}
